--- a/src/exe/bam-readcount/CMakeLists.txt
+++ b/src/exe/bam-readcount/CMakeLists.txt
@@ -6,6 +6,16 @@ set(SOURCES bamreadcount.cpp)
 
 set(EXECUTABLE_NAME bam-readcount)
 xadd_executable(${EXECUTABLE_NAME} ${SOURCES})
-target_link_libraries(${EXECUTABLE_NAME} bamrc ${Samtools_LIBRARIES} ${Boost_LIBRARIES})
-set_target_properties(${EXECUTABLE_NAME} PROPERTIES PACKAGE_OUTPUT_NAME ${EXECUTABLE_NAME}${EXE_VERSION_SUFFIX})
-install(TARGETS ${EXECUTABLE_NAME} DESTINATION bin/)
+
+target_include_directories(${EXECUTABLE_NAME}
+        PUBLIC
+        $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src/lib>
+        )
+target_link_libraries(${EXECUTABLE_NAME} PUBLIC bamrc)
+set_target_properties(${EXECUTABLE_NAME}
+        PROPERTIES
+        PACKAGE_OUTPUT_NAME ${EXECUTABLE_NAME}${EXE_VERSION_SUFFIX}
+        )
+
+install(TARGETS ${EXECUTABLE_NAME}
+        RUNTIME DESTINATION bin)
