cleanup and improve cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ find_package(Threads)
 # main project
 
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
+set(BAMRC_LIBDIR ${PROJECT_SOURCE_DIR}/src/lib)
 add_projects(src/lib)
 add_projects(src/exe)
 
