--- a/src/exe/bam-readcount/CMakeLists.txt
+++ b/src/exe/bam-readcount/CMakeLists.txt
@@ -5,13 +5,18 @@ project(bam-readcount)
 set(SOURCES bamreadcount.cpp)
 
 set(EXECUTABLE_NAME bam-readcount)
-xadd_executable(${EXECUTABLE_NAME} ${SOURCES})
+#xadd_executable(${EXECUTABLE_NAME} ${SOURCES})
+
+add_executable(${EXECUTABLE_NAME} ${SOURCES})
 
 target_include_directories(${EXECUTABLE_NAME}
         PUBLIC
-        $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src/lib>
+        $<BUILD_INTERFACE:${BAMRC_LIBDIR}>
+        $<INSTALL_INTERFACE:include>
         )
-target_link_libraries(${EXECUTABLE_NAME} PUBLIC bamrc)
+target_link_libraries(${EXECUTABLE_NAME}
+        PUBLIC
+        bamrc)
 set_target_properties(${EXECUTABLE_NAME}
         PROPERTIES
         PACKAGE_OUTPUT_NAME ${EXECUTABLE_NAME}${EXE_VERSION_SUFFIX}
